# Coupon-collector-s-simulation

./: .gitignore  CMakeLists.txt  Functions.cpp  Functions.h  Makefile  README.md  main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  output.csv
Recycle bin/: main2.cpp
rapport/: link.txt  projet math.docx  ~$ojet math.docx
script_r/: .RData  .Rhistory  AverageWeeksVSTotalNumberOfCollection.R  AverangeWeeksEnFonctionDeN.R  AverangeWeeksEnFonctionDeN.csv  AverangeWeeksEnFonctionDeNombreA_Collecter.csv  AverangeWeeksEnFonctionDeNombreA_Collecter_Avec_5.csv  AverangeWeeksVSVignetteNumber.R  AverangeWeeksVSVignetteNumber.csv  SimulationCollectionVignette.R  SimulationCollectionVignetteTheorique.R  _SemaineEnFonctionDeNombreA_Collecte_Avec_2.csv
script_r/1_simulation_simple/: Nombre de vignettes collectées en fonction du temps (nombres de semaines).R  SimulationCollectionVignette.R
script_r/3_AverageWeeksVSTotalNumberOfCollection/: .RData  .Rhistory  AverageWeeksVSTotalNumberOfCollection.R  Nombre de semaines necessaires  en fonction du nombre de vignettes dans la collection.R  _SemainesEnFonctionDeNombreA_Collecte.csv  _SemainesEnFonctionDeNombreA_Collecte_Avec_2.csv
script_r/3_nbr_de_semaines_en_fct_du_nbr_de_vignette_dans_collection/: .RData  .Rhistory  Nombre_de_semaines_necessaires _en_fonction_du_nombre_de_vignettes_dans_la_collection.R  _SemainesEnFonctionDeNombreA_Collecte.csv
script_r/4_influence_du_taux_d_echange/: Nombre de semaines nécessaires  en fonction du nombre de vignettes dans la collection.R  (+1 more)
(+30 files in other folders)
