cmake_minimum_required(VERSION 3.26)
project(Coupon-collector-s-simulation)

set(CMAKE_CXX_STANDARD 11)

add_executable(Coupon-collector-s-simulation main.cpp Functions.h)
add_executable(Main3 main3.cpp Functions.h)
add_executable(Main4 main4.cpp Functions.h)
add_executable(Main5 main5.cpp Functions.h)
add_executable(Main6 main6.cpp Functions.h)